--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -17,6 +17,10 @@
         max-width: 350px;
         display: none;
     }
+    #myLink:hover
+    {
+        cursor:pointer;
+    }
 </style>
 
 
@@ -40,7 +44,8 @@
                     @Html.ActionLink(item.fullName, "Edit", new { id = item.ID })
                 </td>
                 <td>
-                    @Html.ActionLink("Delete", null, null, new { @id = "myLink", onclick = "numberDelete(" + item.ID + ")" })
+                    @*@Html.ActionLink("Delete", null, null, new { @id = "myLink", onclick = "numberDelete(" + item.ID + ")" })*@
+                    @Html.Label("Delete", "Delete", new { @id = "myLink", onclick = "numberDelete(" + item.ID + ")" })
                 </td>
             </tr>
         }
